Fix spacings on mobile views

--- a/components/_card.scss
+++ b/components/_card.scss
@@ -59,6 +59,6 @@
   }
 
   &__body {
-    padding: $gap;
+    padding: var(--gap);
   }
 }
