--- a/components/_popup.scss
+++ b/components/_popup.scss
@@ -41,13 +41,13 @@
   justify-content: center;
   pointer-events: none;
   z-index: 3000;
-  padding: $gap;
+  padding: var(--gap);
 
   &__body {
     border-radius: $border-radius;
     background-color: $white;
     box-shadow: $box-shadow;
-    padding: $gap;
+    padding: var(--gap);
     transition: transform .3s ease-in-out;
     transform: scale(0, 0);
     max-height: 100%;
